// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioGroup /> should display image if one is provided 1`] = `
<div
  className="src__StyledFieldset-g1up10-0 GCAUt"
>
  <span
    className="src__StyledLabelText-sc-1lbxenh-0 hMoPlE"
  >
    Does this test pass?
  </span>
  <span
    className="src__StyledError-kkeaok-0 hCyeUQ"
  >
    Select an option
  </span>
  <div>
    <label
      className="src__Label-sc-9fy7us-0 flIUxD"
    >
      <input
        checked={false}
        className="src__Input-sc-9fy7us-1 ePuzqb"
        type="radio"
        value="yes"
      />
      <span
        className="src__LabelText-sc-9fy7us-2 kDLiYx"
      >
        Yes
      </span>
    </label>
  </div>
  <div>
    <label
      className="src__Label-sc-9fy7us-0 flIUxD"
    >
      <input
        checked={false}
        className="src__Input-sc-9fy7us-1 ePuzqb"
        type="radio"
        value="no"
      />
      <span
        className="src__LabelText-sc-9fy7us-2 kDLiYx"
      >
        No
      </span>
    </label>
  </div>
</div>
`;

exports[`<RadioGroup /> should match the default snapshot 1`] = `
<div
  className="src__StyledFieldset-g1up10-0 lazxDt"
>
  <span
    className="src__StyledLabelText-sc-1lbxenh-0 hMoPlE"
  >
    Does this test pass?
  </span>
  <div>
    <label
      className="src__Label-sc-9fy7us-0 flIUxD"
    >
      <input
        checked={false}
        className="src__Input-sc-9fy7us-1 ePuzqb"
        type="radio"
        value="yes"
      />
      <span
        className="src__LabelText-sc-9fy7us-2 kDLiYx"
      >
        Yes
      </span>
    </label>
  </div>
  <div>
    <label
      className="src__Label-sc-9fy7us-0 flIUxD"
    >
      <input
        checked={false}
        className="src__Input-sc-9fy7us-1 ePuzqb"
        type="radio"
        value="no"
      />
      <span
        className="src__LabelText-sc-9fy7us-2 kDLiYx"
      >
        No
      </span>
    </label>
  </div>
</div>
`;

exports[`<RadioGroup /> should match the with hint text snapshot 1`] = `
<div
  className="src__StyledFieldset-g1up10-0 lazxDt"
>
  <span
    className="src__StyledLabelText-sc-1lbxenh-0 hMoPlE"
  >
    Does this test pass?
  </span>
  <span
    className="src__StyledHint-tq1z5r-0 csotVo"
  >
    Supporting text to help
  </span>
  <div>
    <label
      className="src__Label-sc-9fy7us-0 flIUxD"
    >
      <input
        checked={false}
        className="src__Input-sc-9fy7us-1 ePuzqb"
        type="radio"
        value="yes"
      />
      <span
        className="src__LabelText-sc-9fy7us-2 kDLiYx"
      >
        Yes
      </span>
    </label>
  </div>
  <div>
    <label
      className="src__Label-sc-9fy7us-0 flIUxD"
    >
      <input
        checked={false}
        className="src__Input-sc-9fy7us-1 ePuzqb"
        type="radio"
        value="no"
      />
      <span
        className="src__LabelText-sc-9fy7us-2 kDLiYx"
      >
        No
      </span>
    </label>
  </div>
</div>
`;

exports[`<RadioGroup /> should match the with meta and error snapshot 1`] = `
<div
  className="src__StyledFieldset-g1up10-0 GCAUt"
>
  <span
    className="src__StyledLabelText-sc-1lbxenh-0 hMoPlE"
  >
    Does this test pass?
  </span>
  <span
    className="src__StyledError-kkeaok-0 hCyeUQ"
  >
    Select an option
  </span>
  <div>
    <label
      className="src__Label-sc-9fy7us-0 flIUxD"
    >
      <input
        checked={false}
        className="src__Input-sc-9fy7us-1 ePuzqb"
        type="radio"
        value="yes"
      />
      <span
        className="src__LabelText-sc-9fy7us-2 kDLiYx"
      >
        Yes
      </span>
    </label>
  </div>
  <div>
    <label
      className="src__Label-sc-9fy7us-0 flIUxD"
    >
      <input
        checked={false}
        className="src__Input-sc-9fy7us-1 ePuzqb"
        type="radio"
        value="no"
      />
      <span
        className="src__LabelText-sc-9fy7us-2 kDLiYx"
      >
        No
      </span>
    </label>
  </div>
</div>
`;
